# DEPRECATED_qml_radio_plugin

./: Makefile.am  README  README.md  configure.ac  qml_radio.cpp  qml_radio.h  qml_radio_output.cpp  qml_radio_output.h  qml_rtlsdr_radio.cpp  qml_rtlsdr_radio.h  radio.qml  z_clean.sh  z_compile.sh  z_run.sh
radio/: qmldir
